# moqi-im-windows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  backends.json
.cursor/rules/: protoc.mdc
.github/workflows/: nightly.yml  release.yml
MoqLauncher/: BackendServer.cpp  BackendServer.h  CMakeLists.txt  MoqiLauncher.cpp  MoqiLauncher.rc  PipeClient.cpp  PipeClient.h  PipeSecurity.cpp  PipeSecurity.h  PipeServer.cpp  PipeServer.h  Utils.cpp  Utils.h  UvPipe.h  resource.h  version.rc.in
MoqiTextService/: CMakeLists.txt  DllEntry.cpp  MoqiCandidateWindow.cpp  MoqiCandidateWindow.h  MoqiClient.cpp  MoqiClient.h  MoqiImeModule.cpp  MoqiImeModule.h  MoqiLangBarButton.cpp  MoqiLangBarButton.h  MoqiTextService.cpp  MoqiTextService.def  MoqiTextService.h  MoqiTextService.rc.in  TsfLog.cpp  TsfLog.h  resource.h
Preview/: CMakeLists.txt  main.cpp
SetupHelper/: CMakeLists.txt  SetupHelper.cpp
installer/: MoqiTsf.iss  README.txt  build-installer.ps1
proto/: ProtoFraming.h  moqi.pb.cc  moqi.pb.h
scripts/: _all_in_package.ps1  build.bat  build.ps1  deploy-server.ps1  generate-glyph-icon.ps1  install.ps1  package.ps1  sync-from-pime.ps1
